Use codecs over raw use of JsonElements